# agentforge-graph

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  agentforge.yaml  ckg.yaml  pyproject.toml
.agentforge-state/: answers.yml
.claude/: CLAUDE.md
.claude/standards/: coding.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  postrelease.yml  prerelease.yml  release.yml
docs/: ARCHITECTURE.md  open-source-ckg-research.md
docs/adr/: 0001-build-on-agentforge-framework.md  0002-tree-sitter-over-compiler-grade-extraction.md  0003-stable-symbol-ids-and-per-file-subgraphs.md  0004-provenance-on-every-fact.md  0005-reserve-higher-level-node-kinds-up-front.md  0006-embedded-first-pluggable-storage.md  0007-ast-aware-chunking-with-chunk-symbol-separation.md  0008-hybrid-retrieval-vector-then-graph.md  0009-top-10-language-scope-with-support-tiers.md  README.md
docs/assets/: demo.tape  setups.tape
docs/bugs/: BUG-001-src-layout-import-resolution.md  BUG-002-retrieval-scores-render-zero.md  BUG-003-adr-readme-ingested-as-decision.md  BUG-004-relative-from-import-resolution.md  BUG-005-typescript-abstract-class-not-extracted.md  BUG-006-commonjs-require-not-resolved.md  BUG-007-overload-resolution-nondeterministic.md  BUG-008-rerank-yaml-boolean-breaks-query.md  README.md
docs/design/: README.md  design-001-core-contracts-module.md  design-002-tree-sitter-ingestion.md  design-003-graph-storage-adapters.md  design-004-incremental-indexing.md  design-005-ast-chunking-and-embeddings.md  design-006-hybrid-retrieval.md  design-007-repo-map.md  design-008-mcp-server-and-tool-api.md  design-009-temporal-evolution-layer.md  design-010-adr-and-docs-ingestion.md  design-011-framework-extractors.md  design-012-llm-enrichment.md  design-012b-summaries.md  design-013-agent-auto-configuration.md  design-014-watch-and-ci-indexing.md  design-015-read-only-graph-query.md  design-016-grounded-doc-generation.md  design-enh-021-workspace-build-commands.md  design-enh-022-workspace-config-cascade.md  design-enh-024-remote-repo-sources.md  design-enh-026-config-preflight.md
docs/enhancements/: ENH-001-pattern-recall-tuning.md  ENH-002-parallelize-enrichment-calls.md  ENH-003-pluggable-model-provider-registry.md  ENH-004-first-party-storage-backends.md  ENH-005-http-mcp-transport-auth.md  ENH-006-cli-path-arg-consistency.md  ENH-007-repomap-public-api-orientation.md  ENH-008-typescript-symbol-completeness.md  ENH-009-retrieval-precision-dense-codebases.md  ENH-010-surrealdb-storage-backend.md  ENH-011-cross-file-framework-resolution.md  ENH-012-additional-framework-packs.md  ENH-013-rerank-measurement-campaign.md  ENH-014-agentforge-production-rails.md  ENH-015-postgres-graph-backend.md  ENH-016-hosted-docs-site.md  ENH-017-surface-framework-upgrade-drift.md  ENH-018-store-location-and-central-hosting.md  ENH-019-serve-mcp-workdir-autodiscovery.md  ENH-020-federated-multi-repo-mcp.md  ENH-021-workspace-build-commands.md  ENH-022-workspace-config-cascade.md  ENH-023-per-member-embed-toggle.md  ENH-024-remote-repo-sources.md  ENH-025-voyage-embedder.md  ENH-026-config-preflight-fail-fast.md  README.md  THEME-org-central-knowledge.md
docs/features/: README.md  TRACKER.md  feat-001-graph-schema-and-core-contracts.md  feat-002-tree-sitter-ingestion.md  feat-003-graph-storage-adapters.md  feat-004-incremental-indexing.md  feat-005-ast-chunking-and-embeddings.md  feat-006-hybrid-retrieval.md  feat-007-repo-map-summarization.md  feat-008-mcp-server-and-tool-api.md  feat-009-temporal-evolution-layer.md  feat-010-adr-and-docs-ingestion.md  feat-011-framework-extractors.md  feat-012-llm-enrichment.md  feat-013-agent-auto-configuration.md  feat-014-watch-and-ci-indexing.md  feat-015-read-only-graph-query.md  feat-016-grounded-doc-generation.md
docs/guides/: 01-getting-started.md  02-indexing-and-retrieval.md  03-framework-extraction.md  04-cross-file-framework-resolution.md  05-architecture-decisions.md  06-temporal-history.md  07-enrichment.md  08-model-providers.md  09-storage-backends.md  10-using-over-mcp.md  11-agent-auto-configuration.md  12-watch-and-ci-indexing.md  13-graph-query.md  14-grounded-doc-generation.md  README.md  architecture-decisions.md  cross-file-framework-resolution.md  enrichment.md  framework-extraction.md  indexing-and-retrieval.md  model-providers.md  storage-backends.md  temporal-history.md  using-over-mcp.md
docs/known-limitations/: KL-001-llm-summary-hallucination.md  README.md
docs/release/: 0.6.2.md  0.6.3.md  0.6.4.md  README.md
docs/runbooks/: 01-set-up-new-agent.md  02-add-a-tool.md  03-add-a-pipeline-task.md  04-pick-reasoning-strategy.md  05-write-prompts.md  06-test-your-agent.md  07-debug-a-run.md  08-add-memory.md  09-add-mcp.md  10-add-evaluators.md  11-add-safety-guardrails.md  12-add-observability.md  13-configure-multi-provider.md  14-deploy-your-agent.md  15-upgrade-your-agent.md  16-configuration-reference.md  17-add-reranker.md  18-add-hybrid-search.md  19-add-graphrag.md  20-apply-schema-migrations.md  21-use-streaming-guardrails.md  README.md
docs/validation/: README.md  cpp-fmt.md  csharp-newtonsoft-json.md  go-cobra.md  java-gson.md  javascript-express-chalk.md  php-monolog.md  python-click.md  ruby-thor.md  rust-serde-json.md  typescript-zod.md  w4-agent-dogfood.md
examples/: README.md  workspace.yaml
examples/fastapi-shop/: app.py
examples/microservices/: README.md  workspace.yaml
scripts/: render-setups-gif.sh  rerank_benchmark.py  rerank_eval.py
src/agentforge_graph/: __init__.py  cli.py  cli_format.py  config.py  main.py  observability.py  preflight.py  (+1 more)
tests/: test_cli_path_args.py  test_cli_query.py  test_cli_version.py  test_config.py  test_observability.py  test_preflight.py  test_providers.py  test_query_config.py  test_read_only.py
(+453 files in other folders)
