# AGENTFORGE-MANAGED: template:minimal@0.2.4 hash:6f314576dc1d
# NOTE: customized for agentforge-graph — deps + extras edited from the
# scaffold default. Managed-file upgrades will treat this as forked.
[project]
name = "agentforge-graph"
version = "0.2.0.dev0"
description = "Code Knowledge Graph (CKG) engine + agent toolset, built on AgentForge."
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.13"
dependencies = [
    # --- AgentForge framework (runtime + provider + serving) ---
    "agentforge-py",                       # core contracts + Agent runtime + CLI
    "agentforge-anthropic[anthropic]",     # LLM provider for enrichment (feat-010, feat-012)
    "agentforge-mcp[mcp]",                 # MCP serving layer + mcp SDK (feat-008)
    "python-dotenv>=1.0",
    "pyyaml>=6",                           # read ckg.yaml engine config (feat-003+)
]

[project.optional-dependencies]
# Deterministic graph engine (feat-002/003/005/007). Heavy native wheels
# (pyarrow, onnxruntime) — installed as features land: `uv sync --extra engine`.
engine = [
    "tree-sitter>=0.23",                   # parsing core (feat-002)
    "tree-sitter-language-pack>=0.9",      # 100+ grammars incl. the v0.1 top-10 (feat-002)
    "kuzu>=0.6",                           # embedded graph store, default (feat-003 / ADR-0006)
    "lancedb>=0.15",                       # embedded vector store, default (feat-003)
    "fastembed>=0.4",                      # local embeddings, default (feat-005)
    "networkx>=3.3",                       # PageRank for the repo map (feat-007)
]
# Optional reranker (feat-006, OFF by default — pulls torch). `--extra rerank`.
rerank = ["agentforge-reranker-sentence-transformers"]
# Opt-in server graph backend: Neo4j (ENH-004 / ADR-0006). `--extra neo4j`.
neo4j = ["neo4j>=5"]
# Opt-in server vector backend: Postgres + pgvector (ENH-004). `--extra pgvector`.
pgvector = ["asyncpg>=0.30", "pgvector>=0.3"]
# Opt-in hosted embeddings (feat-005). `--extra voyage`.
voyage = ["agentforge-voyage"]
# AWS Bedrock embeddings + LLM enrichment (feat-005/012, Cohere + Claude). `--extra bedrock`.
bedrock = ["boto3>=1.35"]
# OpenAI (and OpenAI-compatible / local) embeddings (ENH-003). `--extra openai`.
openai = ["openai>=1.40"]
# Opt-in observability (OpenTelemetry tracing). `--extra otel`.
otel = ["agentforge-otel"]
# Test + lint toolchain.
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6",                      # stubs for strict mypy over yaml
]

[project.scripts]
ckg = "agentforge_graph.main:main"             # primary CLI (feat-002/008: index, serve-mcp, …)
agentforge-graph = "agentforge_graph.main:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge_graph"]
# Tree-sitter query packs (language + framework) are read at runtime via
# __file__; ship every .scm under the package.
artifacts = ["src/agentforge_graph/**/*.scm"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

# Native engine deps ship no type stubs; keep our own code strict by
# ignoring only the missing third-party imports at the boundary.
[[tool.mypy.overrides]]
module = [
    "kuzu.*",
    "lancedb.*",
    "pyarrow.*",
    "boto3.*",
    "botocore.*",
    "networkx.*",
    "openai.*",       # ENH-003 openai embedder; in the `openai` extra, not the base/dev env
    "anthropic.*",    # ENH-003 anthropic enrichers; SDK ships with the base install
    "neo4j.*",        # ENH-004 Neo4j graph backend; in the `neo4j` extra
    "asyncpg.*",      # ENH-004 pgvector backend; in the `pgvector` extra
    "pgvector.*",     # ENH-004 pgvector backend; in the `pgvector` extra
    "agentforge.*",
    "agentforge_core.*",
    "agentforge_mcp.*",
    "mcp.*",          # ENH-005 HTTP-auth runner; mcp SDK ships in the [mcp] extra
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agentforge_graph --cov-report=term-missing --cov-fail-under=90"
